fix position on invisible div

--- a/wp-content/themes/lafaete/css/style.css
+++ b/wp-content/themes/lafaete/css/style.css
@@ -1054,7 +1054,7 @@ iframe {
 @media (max-width: 575.98px) {
   #produtos .produto-floater .texto::after {
     width: 50px;
-    right: 90px;
+    right: 68px;
   }
 }
 #produtos .produto-floater {
