--- a/wp-content/themes/lafaete/scss/_produtos.scss
+++ b/wp-content/themes/lafaete/scss/_produtos.scss
@@ -228,7 +228,7 @@
         z-index: 1;
         @include breakpoint(smartphones) {
             width: 50px;
-            right: 90px;
+            right: 68px;
         }
     }
 
